prodMetadata/src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>MA_Clean_City__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Country__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_County__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_District__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Postal_Code__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_State__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Street__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Latitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Longitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Quality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MA_Similarity_Level__c</fullName>
        <label>Similarity Level (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>